# TinyRpc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
conf/: config.xml
src/: CMakeLists.txt
src/common/: CMakeLists.txt  config.cc  log.cc  util.cc
src/include/common/: config.h  log.h  util.h
test/: CMakeLists.txt
test/common/: log_gtest.cc  log_test.cc
